--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -3,15 +3,15 @@ services:
   reverseproxy:
     build:
       context: ./udagram-reverseproxy
-    image: reverseproxy:v3c
+    image: reverseproxy:v3d
   api_user:
     build:
       context: ./udagram-api-user
-    image: udagram-api-user:v3c
+    image: udagram-api-user:v3d
   api_feed:
     build:
       context: ./udagram-api-feed
-    image: udagram-api-feed:v3c
+    image: udagram-api-feed:v3d
   frontend:
     build:
       context: ./udagram-frontend
