--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   reverseproxy:
-      image: reverseproxy:v3c
+      image: reverseproxy:v3d
       ports:
           - 8080:8080
       restart: always
@@ -9,7 +9,7 @@ services:
         - api-user
         - api-feed
   api-user:
-    image: udagram-api-user:v3c
+    image: udagram-api-user:v3d
     environment:
       POSTGRES_USERNAME: $POSTGRES_USERNAME
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
@@ -21,7 +21,7 @@ services:
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
   api-feed:
-    image: udagram-api-feed:v3c
+    image: udagram-api-feed:v3d
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
